fix(tags): make z-index of paginator lower than the modal

--- a/src/app/pages/tags/tags.component.scss
+++ b/src/app/pages/tags/tags.component.scss
@@ -126,3 +126,9 @@
   }
 
 }
+
+bego-table-multiple-selection {
+  ::ng-deep .paginator-container {
+    z-index: 1;
+  }
+}
